--- a/css/neve-override.css
+++ b/css/neve-override.css
@@ -1,3 +1,14 @@
+/* ===========[ general ]=== */
+
+[data-row-id] {
+  color: var(--gest-color);
+  background: var(--gest-bgcolor);
+}
+
+[data-row-id] a {
+  color: var(--gest-color);
+}
+
 /* ===========================================================[ nav-brand ]===*/
 
 .site-logo {
