--- a/css/colors.css
+++ b/css/colors.css
@@ -17,4 +17,6 @@
 
   --gest-color: rgba(0, 0, 0, 1);
   --gest-bgcolor: rgba(255, 255, 255, 1);
+  --gest-text-color: var(--gest-color);
+  --gest-site-bg: var(--gest-bgcolor);
 }
