--- a/style.css
+++ b/style.css
@@ -15,4 +15,5 @@ Tags: blog, custom-logo, e-commerce, rtl-language-support, post-formats, grid-la
 @import url("css/fonts.css");
 @import url("css/colors.css");
 @import url("css/neve-override.css");
+@import url("css/wordpress-override.css");
 @import url("css/custom.css");
