--- a/css/wordpress-override.css
+++ b/css/wordpress-override.css
@@ -1,9 +1,7 @@
-.wp-block-image {
+.wp-block-cover {
   --gest-img-border-radius: 12px;
 }
 
-.wp-block-image img {
+.wp-block-cover img {
   border-radius: var(--gest-img-border-radius);
-  display: block;
-  margin: 0 auto;
 }
