--- a/style.css
+++ b/style.css
@@ -12,8 +12,10 @@ Text Domain:    neve
 Tags: blog, custom-logo, e-commerce, rtl-language-support, post-formats, grid-layout, one-column, two-columns, custom-background, custom-colors, custom-header, custom-menu, featured-image-header, featured-images, flexible-header, full-width-template, sticky-post, theme-options, threaded-comments, translation-ready, accessibility-ready, wide-blocks, block-styles
 */
 
-@import url("css/fonts.css");
 @import url("css/colors.css");
-@import url("css/neve-override.css");
-@import url("css/wordpress-override.css");
+@import url("css/fonts.css");
+@import url("css/sizes.css");
 @import url("css/custom.css");
+@import url("css/neve-override.css");
+@import url("css/uag-override.css");
+@import url("css/wordpress-override.css");
