feat: Next Try for Rounded UAG Borders

--- a/css/uag-override.css
+++ b/css/uag-override.css
@@ -3,7 +3,7 @@
   overflow: hidden;
 }
 
-.uagb-post__inner-wrap {
+.uagb-infobox__outer-wrap {
   border-radius: var(--gest-img-border-radius);
   overflow: hidden;
 }
