feat: UAG Post Rounded Border
Needed to increase border-radius, so that it becomes visible.

--- a/css/uag-override.css
+++ b/css/uag-override.css
@@ -3,7 +3,7 @@
   overflow: hidden;
 }
 
-.uagb-infobox__outer-wrap {
-  border-radius: var(--gest-img-border-radius);
+.uagb-post__inner-wrap {
+  border-radius: calc(var(--gest-img-border-radius) * 2);
   overflow: hidden;
 }
