--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ Tags: blog, custom-logo, e-commerce, rtl-language-support, post-formats, grid-la
 @import url("css/fonts.css");
 @import url("css/sizes.css");
 @import url("css/custom.css");
+@import url("css/general-override.css");
 @import url("css/neve-override.css");
 @import url("css/uag-override.css");
 @import url("css/wordpress-override.css");
