--- a/css/neve-override-no-mobile.css
+++ b/css/neve-override-no-mobile.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 769px) {
   /* Display sub-text in logo on non-mobile only. */
   .site-logo small {
-    display: inherit !important;
+    display: block !important;
   }
 
   /* Force logo-text to wrap. */
