--- a/css/neve-override.css
+++ b/css/neve-override.css
@@ -17,7 +17,7 @@ body {
   background-color: var(--gest-site-bg);
 }
 
-/* ===========================================================[ nav-brand ]===*/
+/* ==========================================================[ nav-brand ]=== */
 
 .site-logo {
   font-family: var(--gest-logo-ff);
@@ -36,4 +36,10 @@ body {
 /* By default, don't force wrapped text in logo. */
 .site-logo .nv-title-tagline-wrap {
   min-width: inherit;
+}
+
+/* =============================================================[ footer ]=== */
+
+.footer-bottom {
+  display: none;
 }
