--- a/css/uag-override.css
+++ b/css/uag-override.css
@@ -7,3 +7,7 @@
   border-radius: calc(var(--gest-img-border-radius) * 2);
   overflow: hidden;
 }
+
+button.slick-arrow {
+  background-color: rgba(255, 255, 255, 0.5) !important;
+}
