--- a/css/custom.css
+++ b/css/custom.css
@@ -4,3 +4,7 @@
   font-size: 24px;
   font-weight: var(--gest-kalam-wght-bold);
 }
+
+.secondary-menu {
+  font-weight: var(--gest-text-wght-bold);
+}
