feat: Identify Secondary Menu By ID

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,6 +5,6 @@
   font-weight: var(--gest-kalam-wght-bold);
 }
 
-.secondary-menu {
+#secondary-menu {
   font-weight: var(--gest-text-wght-bold);
 }
