--- a/css/fonts.css
+++ b/css/fonts.css
@@ -23,4 +23,7 @@
   --gest-handwriting-ff: var(--gest-kalam-ff), var(--nv-default-ff), var(--nv-fallback-ff);
 
   --gest-bodyfontfamily: var(--gest-open-sans-ff), var(--nv-default-ff), var(--nv-fallback-ff);
+
+  --gest-formfieldfontfamily: var(--gest-open-sans-ff), var(--nv-default-ff), var(--nv-fallback-ff);
+  --gest-formfieldfontweight: var(--gest-open-sans-wght-normal);
 }
