feat: Experiment With Var Override
Instead of adapting CSS-style-rules, can we just override the existing variables?

--- a/css/colors.css
+++ b/css/colors.css
@@ -24,4 +24,7 @@
 
   --gest-formfieldcolor: var(--gest-color);
   --gest-formfieldbgcolor: var(--gest-bgcolor);
+
+  --color: orange;
+  --primarybtncolor: red;
 }
