--- a/gest/fonts/typed.css
+++ b/gest/fonts/typed.css
@@ -1,18 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@700&family=Mitr:wght@400;600&family=Open+Sans:ital,wght@0,400;0,600;1,400;1,600&display=swap');
-
 :root {
-  --nv-fallback-ff: Arial, Helvetica, sans-serif;
-  --nv-default-ff: Graphik, -apple-system, BlinkMacSystemFont, Segoe UI;
-
-  --gest-open-sans-ff: Open Sans Regular, Open Sans;
-  --gest-open-sans-wght-normal: 400;
-  --gest-open-sans-wght-bold: 600;
-  --gest-mitr-ff: Mitr Regular, Mitr;
-  --gest-mitr-wght-normal: 400;
-  --gest-mitr-wght-bold: 600;
-  --gest-kalam-ff: Kalam;
-  --gest-kalam-wght-bold: 700;
-
   --gest-text-ff: var(--gest-open-sans-ff), var(--nv-default-ff), var(--nv-fallback-ff);
   --gest-text-wght-normal: var(--gest-open-sans-wght-normal);
   --gest-text-wght-bold: var(--gest-open-sans-wght-bold);
@@ -22,10 +8,16 @@
   --gest-logo-wght-bold: var(--gest-mitr-wght-bold);
   --gest-handwriting-ff: var(--gest-kalam-ff), var(--nv-default-ff), var(--nv-fallback-ff);
 
-  --gest-bodyfontfamily: var(--gest-open-sans-ff), var(--nv-default-ff), var(--nv-fallback-ff);
-
   --gest-fontfamily: var(--gest-open-sans-ff), var(--nv-default-ff), var(--nv-fallback-ff);
   --gest-fontweight: var(--gest-open-sans-wght-normal);
+  --gest-fontweight-bold: var(--gest-open-sans-wght-bold);
+
+  --gest-logo-fontfamily: var(--gest-mitr-ff), var(--nv-default-ff), var(--nv-fallback-ff);
+  --gest-logo-fontweight: var(--gest-mitr-wght-normal);
+  --gest-logo-fontweight-bold: var(--gest-mitr-wght-bold);
+
+  --gest-bodyfontfamily: var(--gest-open-sans-ff), var(--nv-default-ff), var(--nv-fallback-ff);
+
   --gest-formfieldfontfamily: var(--gest-open-sans-ff), var(--nv-default-ff), var(--nv-fallback-ff);
   --gest-formfieldfontweight: var(--gest-open-sans-wght-normal);
 }
