--- a/uag/override.css
+++ b/uag/override.css
@@ -9,5 +9,5 @@
 }
 
 button.slick-arrow {
-  background-color: rgba(255, 255, 255, 0.5) !important;
+  background-color: var(--gest-brighten-50) !important;
 }
