--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ Requires PHP: 7.0
 @import url("css/sizes.css");
 
 @import url("cookie-notice/main.css");
+@import url("custom-facebook-feed/main.css");
 @import url("enhanced-tooltipglossary/main.css");
 @import url("general/main.css");
 @import url("gtranslate/main.css");
