feat: Add Margin To Bottom of wp-block-image

--- a/wordpress/override.css
+++ b/wordpress/override.css
@@ -31,5 +31,10 @@ img.scaled-image {
 .wp-block-image img {
   border-radius: var(--gest-img-border-radius);
   display: block;
+  /* Center Image */
   margin: 0 auto;
+}
+
+.wp-block-image {
+  margin-bottom: 12px;
 }
