--- a/wordpress/override.css
+++ b/wordpress/override.css
@@ -67,5 +67,13 @@ img.scaled-image {
 #wpadminbar #wp-admin-bar-top-secondary > #wp-admin-bar-my-account {
   display: initial;
 }
- 
+
+@media (min-width: 600px) {
+  /* Remove strange top-margin on small screens. */
+  html,
+  body {
+    margin-top: 0 !important;
+  }
+}
+
 /* ========================================================[- WP Admin Bar -] */
