--- a/neve/main.css
+++ b/neve/main.css
@@ -1,4 +1,5 @@
 @import url("colors/main.css");
+@import url("fonts/main.css");
 @import url("override.css");
 
 /* Media overrides must come late, to be able overriding all the above. */
