--- a/src/enhanced-tooltipglossary/override.css
+++ b/src/enhanced-tooltipglossary/override.css
@@ -2,3 +2,7 @@
   border-bottom: dotted 1px var(--gest-text-color);
   color: var(--gest-text-color) !important;
 }
+/* Hide author information in glossary entry. */
+.single-glossary .nv-meta-list {
+  display: none
+}
