feat(css): Remove Glossary Term Styling For Print
plugin: enhanced-tooltipglossary
plugin-ref: https://wordpress.org/plugins/enhanced-tooltipglossary/

--- a/src/enhanced-tooltipglossary/main.css
+++ b/src/enhanced-tooltipglossary/main.css
@@ -1,1 +1,10 @@
+/*
+ * Adaptations for the enhanced tooltip glossary.
+ *
+ * Plugin Name: CM Tooltip Glossary
+ * Plugin Identifier: enhanced-tooltipglossary
+ * Plugin URI: https://wordpress.org/plugins/enhanced-tooltipglossary/
+ */
 @import url("override.css");
+
+@import url("media/main.css");
