ci(lint): Apply Linter Fixes

--- a/src/cookie-notice/override.css
+++ b/src/cookie-notice/override.css
@@ -15,13 +15,14 @@
 #cn-accept-cookie:hover, #cn-more-info:hover {
   color: var(--gest-cookie-notice-hover-fg);
   background-color: var(--gest-brighten-30);
-  border-color: currentColor;
+  border-color: currentcolor;
 }
 
 /* Close-Button */
-.cn-close-icon:before, .cn-close-icon:after {
+.cn-close-icon::before, .cn-close-icon::after {
   background-color: var(--gest-cookie-notice-fg);
 }
-.cn-close-icon:before:hover, .cn-close-icon:after:hover {
+
+.cn-close-icon::before:hover, .cn-close-icon::after:hover {
   background-color: var(--gest-cookie-notice-hover-fg);
 }
