--- a/src/neve/media/no-mobile.css
+++ b/src/neve/media/no-mobile.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 769px) {
+@media screen and (width >= 769px) {
   /* Display sub-text in logo on non-mobile only. */
   .site-logo small {
     display: block !important;
