--- a/src/neve/media/small-mobile.css
+++ b/src/neve/media/small-mobile.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 320px) {
+@media screen and (width <= 320px) {
   /* Hide any logo text on very small devices. */
   .site-logo h1, .site-logo p {
     display: none;
