feat(css): Hide Tooltip in Print
plugin: enhanced-tooltipglossary
plugin-ref: https://wordpress.org/plugins/enhanced-tooltipglossary/

--- a/src/enhanced-tooltipglossary/media/print.css
+++ b/src/enhanced-tooltipglossary/media/print.css
@@ -5,4 +5,11 @@
     border-bottom: initial !important;
     color: initial !important;
   }
+
+  /*
+   * Hide tooltip content in print output.
+   */
+  #ttcont {
+    display: none;
+  }
 }
