feat(css): Hide Facebook Feed Heading in Print
plugin: custom-facebook-feed
plugin-ref: https://wordpress.org/plugins/custom-facebook-feed/

--- a/src/custom-facebook-feed/main.css
+++ b/src/custom-facebook-feed/main.css
@@ -1,1 +1,9 @@
+/*
+ * Adaptations for the custom facebook feed.
+ *
+ * Plugin Name: CM Tooltip Glossary
+ * Plugin Identifier: custom-facebook-feed
+ * Plugin URI: https://wordpress.org/plugins/custom-facebook-feed/
+ */
+
 @import url("media/main.css");
