feat(css): Prevent Dark Blue on Black Download Button
WordPress override collides with more specific rule for anchors
within the events calendar. Made selector more explicit, so that
our rule wins.

plugin: the-events-calendar
plugin-ref: https://wordpress.org/plugins/the-events-calendar/

--- a/src/the-events-calendar/main.css
+++ b/src/the-events-calendar/main.css
@@ -1,3 +1,10 @@
+/*
+ * Adaptations for the events calendar.
+ *
+ * Plugin Name: The Events Calendar
+ * Plugin Identifier: the-events-calendar
+ * Plugin URI: https://wordpress.org/plugins/the-events-calendar/
+ */
 @import url("colors/main.css");
 @import url("override.css");
 @import url("media/main.css");
