fix(theme): Deactivate all custom styling
We experience issues with the menus being rendered wrong, something,
which worked before with th v1.0.15 release. We need to identify the
source of this failure.

To do so, starting to disable all custom styling, so that we return
back to Neve default styling.

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
+/*
 @import url("gest/main.css");
+*/
 
 /* <editor-fold desc="Plugin Specific Adaptations."> */
+
+/*
 @import url("cookie-notice/main.css");
 @import url("custom-facebook-feed/main.css");
 @import url("enhanced-tooltipglossary/main.css");
@@ -10,5 +14,6 @@
 @import url("the-events-calendar/main.css");
 @import url("uag/main.css");
 @import url("wordpress/main.css");
+*/
 
 /* </editor-fold> */
