--- a/src/enhanced-tooltipglossary/override.css
+++ b/src/enhanced-tooltipglossary/override.css
@@ -1,29 +1,12 @@
-/* Change Colors for Glossary Term Rendering. */
-#content span.glossaryLink, #content a.glossaryLink {
-  border-bottom: dotted 1px var(--gest-text-color);
-  color: var(--gest-text-color) !important;
+#content span.glossaryLink,
+#content a.glossaryLink {
+  /* Let the context decide the color. */
+
+  /* Especially important for dark backgrounds. */
+  color: inherit !important;
 }
 
 /* Hide author information in glossary entry. */
 .single-glossary .nv-meta-list {
   display: none
 }
-
-/* <editor-fold desc="Two-Column Layout for Glossary List"> */
-.glossary-container {
-  text-align: center;
-}
-
-ul#glossaryList {
-  display: inline-block;
-  width: 90%;
-
-  li {
-    float: left;
-    list-style: outside none none;
-    text-align: left;
-    width: 50%;
-  }
-}
-
-/* </editor-fold> */
